[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/core/DeckBuilder/DeckLoader.gd" type="Script" id=2]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/fragment_forge/NewGame.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 39
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="NewGame" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.690196 )
margin_left = 706.0
margin_top = 331.0
margin_right = 994.0
margin_bottom = 568.0

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 230.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="DeckTitle" type="Label" parent="PC/VBC"]
visible = false
margin_right = 274.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Loaded Deck"
align = 1

[node name="DeckDetails" type="Label" parent="PC/VBC"]
visible = false
margin_right = 274.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Deck Name"
align = 1

[node name="DeckLoader" type="MenuButton" parent="PC/VBC"]
margin_right = 274.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Choose Deck"
flat = false
script = ExtResource( 2 )

[node name="DifficultyLabel" type="Label" parent="PC/VBC"]
margin_top = 53.0
margin_right = 274.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty"
align = 1

[node name="Difficulty" type="HBoxContainer" parent="PC/VBC"]
margin_top = 103.0
margin_right = 274.0
margin_bottom = 153.0

[node name="Decrease" type="Button" parent="PC/VBC/Difficulty"]
margin_right = 37.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "<"

[node name="Level" type="Label" parent="PC/VBC/Difficulty"]
margin_left = 41.0
margin_top = 1.0
margin_right = 233.0
margin_bottom = 49.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="Difficulties" type="PopupPanel" parent="PC/VBC/Difficulty/Level"]
margin_right = 148.0
margin_bottom = 61.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )

[node name="MC" type="MarginContainer" parent="PC/VBC/Difficulty/Level/Difficulties"]
margin_right = 158.0
margin_bottom = 61.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="VBC" type="VBoxContainer" parent="PC/VBC/Difficulty/Level/Difficulties/MC"]
margin_left = 5.0
margin_right = 153.0
margin_bottom = 61.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultiesTitle" type="Label" parent="PC/VBC/Difficulty/Level/Difficulties/MC/VBC"]
margin_right = 148.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty"
align = 1

[node name="DifficultyLegend" type="Label" parent="PC/VBC/Difficulty/Level/Difficulties/MC/VBC"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "0: Normal Game"

[node name="Increase" type="Button" parent="PC/VBC/Difficulty"]
margin_left = 237.0
margin_right = 274.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = ">"

[node name="HBC" type="HBoxContainer" parent="PC/VBC"]
margin_top = 173.0
margin_right = 274.0
margin_bottom = 223.0

[node name="Start" type="Button" parent="PC/VBC/HBC"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
disabled = true
text = "START"

[node name="Back" type="Button" parent="PC/VBC/HBC"]
margin_left = 154.0
margin_right = 274.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "BACK"

[connection signal="deck_loaded" from="PC/VBC/DeckLoader" to="." method="_on_DeckLoader_deck_loaded"]
[connection signal="pressed" from="PC/VBC/Difficulty/Decrease" to="." method="_on_Decrease_pressed"]
[connection signal="mouse_entered" from="PC/VBC/Difficulty/Level" to="." method="_on_Level_mouse_entered"]
[connection signal="mouse_exited" from="PC/VBC/Difficulty/Level" to="." method="_on_Level_mouse_exited"]
[connection signal="pressed" from="PC/VBC/Difficulty/Increase" to="." method="_on_Increase_pressed"]
[connection signal="pressed" from="PC/VBC/HBC/Start" to="." method="_on_Start_pressed"]
